# multi-agent-coding-assistant

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  issue_template.md
.github/workflows/: ci.yml
docs/: keys_setup.md
local/scripts/: install_mac.sh  run_mac.sh  setup_gemma.sh
src/maca/: evaluator.py  maca_config.py  main.py  orchestrator.py  rich_compat.py  rich_shim.py
src/maca/agents/: __init__.py  base.py  coder.py  planner.py  reviewer.py  spec.py
src/maca/models/: __init__.py  claude.py  gemini.py  local_gemma.py
tests/: test_agents.py  test_behavior.py  test_orchestrator_status.py
