[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maca-ai"
version = "1.0.0a0"
description = "MACA: A Multi-Agent Coding Assistant utilizing local Gemma and remote Gemini"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "rich>=13.0.0",
    "certifi>=2023.0.0"
]

[project.scripts]
maca = "maca.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/maca"]
