[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maca-ai"
version = "1.0.0a0"
description = "MACA: A Multi-Agent Coding Assistant utilizing local Gemma and remote Gemini"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "rich>=13.0.0",
    "certifi>=2023.0.0"
]

[project.scripts]
maca = "maca.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/maca"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "rich.*"
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101", "B110", "B310", "B404", "B603", "B607"]
